# subrosa

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md
agent/: README.md  package-lock.json  package.json  tsconfig.json
agent/docker/: guardian-compose.yml
agent/src/: agent.ts  config.ts  cosign-demo.ts  fund-service.ts  guardian.ts  llm.ts  market-operator.ts  onchain.ts  polymarket.test.ts  polymarket.ts  redeem-service.ts  resolution-relay.ts  status.ts  strategy.ts
client/: Cargo.toml  README.md
contracts/: README.md
contracts/market/: Cargo.toml  README.md  miden-project.toml
contracts/market/src/: lib.rs
contracts/notes/: README.md
contracts/notes/place_no_note/: Cargo.toml  README.md  miden-project.toml
contracts/notes/place_no_note/src/: lib.rs
contracts/notes/place_note/: Cargo.toml  miden-project.toml
contracts/notes/place_note/src/: lib.rs
docs/: DECISIONS.md  DEMO.md  DEPLOY.md  GUARDIAN.md  NOTES_MIDEN.md  PLAN.md  POLYMARKET.md  PROGRESS.md  README.md  TUTORIAL.md  VERSIONS.md
operator/: .gitignore  README.md  eth-market-init.toml  fed-market-init.toml  market-init.toml
scripts/: README.md  lifecycle.sh  operator.sh
scripts/place_no/: Cargo.toml
scripts/place_no/src/: lib.rs
scripts/place_yes/: Cargo.toml
scripts/place_yes/src/: lib.rs
scripts/redeem_no/: Cargo.toml
scripts/redeem_no/src/: lib.rs
scripts/redeem_yes/: Cargo.toml
scripts/redeem_yes/src/: lib.rs
scripts/resolve_no/: Cargo.toml  miden-project.toml  rust-toolchain.toml
scripts/resolve_no/src/: lib.rs
scripts/resolve_yes/: Cargo.toml  miden-project.toml
scripts/resolve_yes/src/: lib.rs
tests/: README.md
web/app/: CLAUDE.md  Dockerfile  README.md  cosign.html  index.html  package-lock.json  package.json  serve.mjs  vite.config.ts  vitest.config.ts
web/app/app/: index.html
web/app/scripts/: approvals-ui-test.mjs  copy-wasm.mjs  cosign-browser-test.mjs  demock-test.mjs  detail-defake-test.mjs  fund-smoketest.mjs  market-read-test.mjs  market-ui-test.mjs  markets-live-test.mjs  place-verify-test.mjs  redeem-ui-test.mjs  resolution-test.mjs  toast-test.mjs
web/app/src/: App.tsx  config.ts  cosign-entry.tsx  cosign.ts  main.tsx  providers.tsx  reset-stale-db.ts
web/app/src/components/: Subrosa.tsx  subrosa.css
web/app/src/hooks/: useMarket.ts
web/app/src/lib/: polymarket.test.ts  polymarket.ts
web/app/src/proto/: app.tsx  data.ts  icons.tsx  market.tsx  portfolio.tsx  proto.css  seal.tsx  ui.tsx
web/landing/: README.md  index.html  styles.css
web/landing/tokens/: base.css  colors.css  fonts.css  spacing.css  typography.css
