[package]
name = "subrosa-client"
version = "0.1.0"
edition = "2021"
description = "Subrosa — Miden client: account/tx helpers and privacy verification"

# Pinned to match the live testnet node (see docs/VERSIONS.md, DECISIONS D-008).
# `tonic` feature provides the gRPC node client (GrpcClient).
[dependencies]
miden-client = { version = "=0.14.9", features = ["tonic"] }
miden-client-sqlite-store = "=0.14.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "verify_privacy"
path = "src/bin/verify_privacy.rs"

[[bin]]
name = "place_position"
path = "src/bin/place_position.rs"

[[bin]]
name = "run_script"
path = "src/bin/run_script.rs"
