[package]
name = "place-no"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { version = "0.12" }

[package.metadata.component]
package = "miden:place-no"

[package.metadata.miden]
project-kind = "transaction-script"

[package.metadata.miden.dependencies]
"miden:market" = { path = "../../contracts/market" }

[package.metadata.component.target.dependencies]
"miden:market" = { path = "../../contracts/market/target/generated-wit/" }
