[package]
name = "place-yes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { version = "0.12" }

[package.metadata.component]
package = "miden:place-yes"

[package.metadata.miden]
project-kind = "transaction-script"

# Depends on the deployed market account component.
[package.metadata.miden.dependencies]
"miden:market" = { path = "../../contracts/market" }

[package.metadata.component.target.dependencies]
"miden:market" = { path = "../../contracts/market/target/generated-wit/" }
