[package]
name = "place_note"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { version = "0.12" }

[package.metadata.component]
package = "miden:place-note"

[package.metadata.miden]
project-kind = "note-script"

# Consumed by the network-mode market account, which exposes `place`.
[package.metadata.miden.dependencies]
"miden:market" = { path = "../../market" }

[package.metadata.component.target.dependencies]
"miden:market" = { path = "../../market/target/generated-wit/" }
